Add Types class to make it easier to deal with types